<resources>
    <string name="app_name">RU Burger ©</string>
    <string name="display_integer">start an activity with extra data (integer)</string>
    <string name="display_string">start an activity with extra data (string)</string>
    <string name="rutgers_website">
start an activity with implicit intent (rutgers.edu)
</string>
    <string name="linearlayout">start an activity with a LinearLayout</string>
    <string name="burgers">Burgers</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="beverages">Beverages</string>
    <string name="sides">Sides</string>
    <string name="current">Current Order</string>
    <string name="all">All Orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="combo_title">Combo</string>
    <string name="drinks">Drinks</string>

    <string name="burgers_desc">Order a burger</string>
    <string name="sandwiches_desc">Order a sandwich</string>
    <string name="beverages_desc">Order a beverage</string>
    <string name="sides_desc">Order a sides</string>
    <string name="current_desc">View current order</string>
    <string name="all_desc">View all existing orders</string>

    <string name="patties">Number of Patties</string>
    <string name="bread">Bread Style</string>
    <string name="add_ons">Add-Ons</string>
    <string name="quantity">Quantity</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="add_order">Add to Order</string>
    <string name="combo">Make a Combo</string>
    <string name="combo_instructions">Choose one side and one medium drink</string>
    <string name="bev_instructions">Choose a drink and size</string>
    <string name="side_instructions">Choose a side and size</string>
    <string name="default_price">$0.00</string>

    <string name="single_p">Single</string>
    <string name="double_p">Double</string>

    <string name="brioche">Brioche</string>
    <string name="wheat">Wheat</string>
    <string name="pretzel">Pretzel</string>

    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="avocado">Avocado</string>
    <string name="cheese">Cheese</string>

    <string name="chips">Chips</string>
    <string name="apples">Apples</string>

    <string name="protein">Protein</string>
    <string name="roast_beef">Roast Beef</string>
    <string name="salmon">Salmon</string>
    <string name="chicken">Chicken</string>

    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="size">Size</string>

    <string name="plus">+</string>

    <string name="send_order">Send Order</string>
    <string name="remove_item">Remove Item</string>
    <string name="cancel_order">Cancel Order</string>


</resources>