<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:background="@color/red"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="594dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/burger_bt"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@string/burgers_desc"
                    android:onClick="goToBurger"
                    android:paddingBottom="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/burger_icon" />

                <TextView
                    android:id="@+id/burger_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/burgers"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:translationY="-25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/sandwich_bt"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@string/sandwiches_desc"
                    android:onClick="goToSandwich"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sandwich_icon" />

                <TextView
                    android:id="@+id/sandwich_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sandwiches"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:translationY="-25dp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/beverages_bt"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@string/beverages_desc"
                    android:onClick="goToBeverages"
                    android:padding="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/beverages_icon" />

                <TextView
                    android:id="@+id/beverages_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beverages"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:translationY="-25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/sides_bt"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@string/sides_desc"
                    android:onClick="goToSides"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sides_icon" />

                <TextView
                    android:id="@+id/sides_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sides"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:translationY="-25dp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/current_bt"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@string/current_desc"
                    android:onClick="goToCurrentOrder"
                    android:padding="25dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cart_icon" />

                <TextView
                    android:id="@+id/current_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:translationY="-25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/all_bt"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:backgroundTint="@color/red"
                    android:contentDescription="@string/all_desc"
                    android:onClick="goToAllOrders"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/orders_icon" />

                <TextView
                    android:id="@+id/all_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:translationY="-25dp" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>