<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CurrentOrderActivity">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:background="@color/red"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="casual"
            android:text="@string/current"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom_bar"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/send_order_bt"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="sendOrder"
                android:text="@string/send_order" />

            <Button
                android:id="@+id/remove_item_bt"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="removeSelectedItem"
                android:text="@string/remove_item" />

            <Button
                android:id="@+id/cancel_item_bt"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="cancelEntireOrder"
                android:text="@string/cancel_order" />
        </LinearLayout>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/order_number_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="74dp"
                android:text="@string/current"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtotal_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="268dp"
                android:layout_marginTop="16dp"
                android:text="@string/subtotal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tax_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="268dp"
                android:layout_marginTop="10dp"
                android:text="@string/tax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtotal_txt" />

            <TextView
                android:id="@+id/total_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="268dp"
                android:layout_marginTop="10dp"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tax_txt" />

            <TextView
                android:id="@+id/subtotal_field"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="16dp"
                android:text="@string/default_price"
                app:layout_constraintStart_toEndOf="@+id/subtotal_txt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tax_field"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="10dp"
                android:text="@string/default_price"
                app:layout_constraintStart_toEndOf="@+id/subtotal_txt"
                app:layout_constraintTop_toBottomOf="@id/subtotal_txt" />

            <TextView
                android:id="@+id/total_field"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/default_price"
                app:layout_constraintStart_toEndOf="@+id/total_txt"
                app:layout_constraintTop_toBottomOf="@+id/tax_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/item_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>